# easy80

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  install_unity.sh  run.sh  test_all.sh
extras/asm/: flag_test.asm  test1.asm
extras/roms/: test1.rom
include/: bitmath.h  easy80_debugger_app.h  easy80_debugger_app_win.h  z80_cpu.h  z80_cpu.hpp  z80_flags.h  z80_instructions.h  z80_logic.h  z80_registers.h
include/instructions/: z80_instructions_bit.h  z80_instructions_common.h  z80_instructions_extended.h  z80_instructions_ix.h  z80_instructions_iy.h  z80_instructions_main.h
include/tests/: test_z80_common.h
include/utils/: flags.h
python/: generate_struct_array.py  hello.c
src/: bitmath.c  easy80_debugger_app.c  easy80_debugger_app_win.c  easy80debuggerapp.gresource.xml  main.c  main.cpp  resources.c  window.ui  z80_cpu.c  z80_flags.c  z80_instructions.c  z80_logic.c  z80_registers.c
src/instructions/: z80_instructions_bit.c  z80_instructions_common.c  z80_instructions_extended.c  z80_instructions_ix.c  z80_instructions_iy.c  z80_instructions_main.c
src/tests/: test_z80_instructions_common.c
src/utils/: flags.c
test/: test_bitmath.c  test_z80_cpu.c  test_z80_flags.c  test_z80_logic.c
tools/: build.sh  clean.sh  docs.sh  libs.sh  test.sh
tools/code_gen/: generate_struct_array.py
